# web-extension-analysis

./: .dockerignore  .gitignore  CREDITS  Dockerfile  README.md  cspell.config.yaml  pyproject.toml
.github/config/: web-extension-analysis.dict
.github/workflows/: python-package.yml
.run/: Dockerfile.run.xml
core/: analyze.py  core.py  ip2country.py  localextensions.py  settings.py  updater.py  virustotal.py
db/: updater.py
frontend/: api.py  viewfile.py  viewsource.py
src/core/: __main__.py  analyze.py  core.py  downloader.py  intel.py  ip2country.py  localextensions.py  result.py  scans.py  settings.py  updater.py
src/frontend/: api.py  viewfile.py  viewgraph.py  viewresult.py  viewsource.py
src/main/: __init__.py
src/plugins/: retirejs.py  vulnerabilities.py
src/web_extension_analysis/: __main__.py
src/web_extension_analysis/core/: downloader.py  helper.py  intel.py  result.py
src/web_extension_analysis/frontend/: viewresult.py
src/web_extension_analysis/plugins/: retirejs.py  vulnerabilities.py
test/: conftest.py  test_setup.py
