[project]
name = "web-extension-analysis"
version = "1.0.5"
description = "Browser extension analysis framework"
authors = [{ name = "Tuhinshubhra", email = "tuhin@r3d.ninja" }]
dependencies = ["flask", "python-whois", "requests", "maxminddb", "Flask-WTF"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
extanalysis = "main.__main__:main"
analyze-extensions = "main.__main__:main"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "ruff>=0.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/db",
    "src/frontend",
    "src/main",
    "src/plugins",
]
